优化大型载具预览、打印、查询与传送性能